# mvp-pw-hd-0

./: .gitignore  README.md  pyproject.toml
.atl/: .skill-registry.cache.json  skill-registry.md
app/: auth.py  db.py  main.py  models.py  schemas.py
app/routes/: admin.py  public.py
app/static/css/: admin.css  components.css  main.css  tokens.css
app/static/js/: cart.js  order.js
app/templates/: base.html  base_admin.html
app/templates/admin/: banner.html  dashboard.html  inventario.html  login.html  ordenes.html
app/templates/public/: home.html  order_pending.html
app/templates/public/partials/: cart_summary.html  product_card.html
openspec/: config.yaml
openspec/changes/change-001-foundation/: design.md  proposal.md  tasks.md  verify-report.md
openspec/changes/change-002-db-seed/: tasks.md
openspec/changes/change-002-features/: proposal.md
openspec/changes/change-003-public-ui/: design.md  proposal.md  tasks.md
openspec/changes/change-004-cart-whatsapp/: proposal.md  tasks.md  verify-report.md
openspec/changes/change-005-admin-ui/: tasks.md
openspec/specs/admin-auth/: spec.md
openspec/specs/admin-ui/: spec.md
openspec/specs/app-skeleton/: spec.md
openspec/specs/base-templates/: spec.md
openspec/specs/cart-flow/: spec.md
openspec/specs/component-css/: spec.md
openspec/specs/db-schema/: spec.md
openspec/specs/design-tokens/: spec.md
openspec/specs/order-checkout/: spec.md
openspec/specs/public-ui/: spec.md
openspec/specs/whatsapp-integration/: spec.md
openspec/specs/whatsapp-message/: spec.md
(+27 files in other folders)
