[project]
name = "el-perro-wero"
version = "0.1.0"
requires-python = ">=3.11"
description = "Local web app for Jochos El Perro Wero — Hot Dogs & Hamburguesas"

dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "jinja2>=3.1",
    "python-multipart>=0.0.9",
    "itsdangerous>=2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "httpx>=0.27",
    "ruff>=0.5",
    "mypy>=1.10",
]

[tool.setuptools]
py-modules = ["app"]